<resources>
    <string name="app_name">AppProject_Veterinaria4Patas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_home">Home</string>
    <string name="button_services">Services</string>
    <string name="button_about">About Us</string>
    <string name="welcome_greeting">Veterinaria Cuatro patas</string>
    <string name="text_log_in">Log In</string>
    <string name="text_Sign_In">Sign In</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo</string>
    <string name="register_text">Registrarse</string>
    <string name="text_sesion">Iniciar Sesión</string>

    <dimen name="first_gap">16dp</dimen>
    <dimen name="second_gap">32dp</dimen>
    <dimen name="third_gap">64dp</dimen>
    <dimen name="last_gap">128dp</dimen>
</resources>