<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/default_color">

    <fragment
        android:id="@+id/menu_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_menu"
        android:name="com.mhernandez.appproject_veterinaria4patas.MenuFragment"
        tools:ignore="FragmentTagUsage,MissingConstraints">
    </fragment>

    <fragment
        android:name="com.mhernandez.appproject_veterinaria4patas.InitialTextFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="FragmentTagUsage,MissingConstraints,MissingId"
        tools:layout="@layout/fragment_initial_text"
        android:layout_gravity="center"
        android:layout_margin="@dimen/space_tiny_gap" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/third_gap"
        android:background="@color/dark_green"
        >

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/second_gap"
            android:background="@color/white"
            android:hint="@string/email"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill,MissingConstraints,TextFields"
            tools:layout_editor_absoluteX="32dp" />

        <EditText
            android:id="@+id/editText_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/second_gap"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_password"
            tools:ignore="Autofill,MissingConstraints,TextFields" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/second_gap"
            android:background="@color/white"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@+id/editText_name"
            tools:ignore="Autofill,MissingConstraints,TextFields"
            tools:layout_editor_absoluteX="32dp" />

        <Button
            android:id="@+id/account"
            style="@style/buttons"
            android:layout_marginBottom="@dimen/second_gap"
            android:text="@string/register_text"
            android:textAllCaps="false"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_mail"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="78dp" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.LinearLayoutCompat>